--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         <div class="col-md-6">
-                            <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
+                            <p>Designed By <a href="https://htmlcodex.com">Khoan Cọc Nhồi</a></p>
                         </div>
                     </div>
                 </div>
